ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserErrantEqualsGreaterThanAfterFunction1/input.ts.stderr
error: Expected {, got =>
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/parserErrantEqualsGreaterThanAfterFunction1/input.ts:1:14
  |
1 | function f() => 4;
  |              ^^

